--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,29 @@
 # Site/SEO settings
-email: okay@samesies.io
+email: ""
 baseurl: ""
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-name: Thomas Vaeth
-title: The Barber Theme
+name: breadiquette
+title: breadiquette
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
+  All things sourdough.
 url: http://barber.samesies.io
 twitter_username: thomasvaeth
-default_img: /assets/images/seo.jpg
-social:
-  - name: twitter
-    url: https://twitter.com/thomasvaeth
-  - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
-  - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
-  - name: github
-    url: https://github.com/samesies
-  - name: codepen
-    url: https://codepen.io/thomasvaeth/
+default_img: /assets/images/bread2.jpeg
 
 # Contact settings
-contact_img: /assets/images/placeholder-28.jpg
-formcarry: https://formcarry.com/s/HkIo0nMb7
+contact_img: /assets/images/bread2.jpeg
+formcarry: https://formcarry.com/s/3acM3Nyu7Uh0
 
 # Disqus settings
 disqus: test-apkdzgmqhj
 
 # MailChimp settings
-mailchimp_action: https://samesies.us17.list-manage.com/subscribe/post-json?u=66ddf555dab480e6a8606430b&amp;id=89b3ee034f
+mailchimp_action: https://protonmail.us17.list-manage.com/subscribe/post
 mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
+mailchimp_u: 2212a706735b58239359967e6
+mailchimp_id: f72fb03b05
 
 # Author settings
 author:
