--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@ name: breadiquette
 title: breadiquette
 description: >
   All things sourdough.
-url: http://barber.samesies.io
-twitter_username: thomasvaeth
+url: http://breadiquette.github.io
 default_img: /assets/images/bread2.jpeg
 
 # Contact settings
@@ -27,9 +26,9 @@ mailchimp_id: f72fb03b05
 
 # Author settings
 author:
-  - name: Thomas Vaeth
-    bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
-    url: http://thomasvaeth.com
+  - name: Clara Stelow
+    bio: n/a
+    url: n/a
 
 # Pagination settings
 pagination:
@@ -50,7 +49,7 @@ autopages:
   tags:
     layouts: 
       - 'tag.html'
-    title: 'The Barber Theme'
+    title: 'Breadiquette'
     permalink: '/tag/:tag'
     slugify:
       mode: raw
